--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
     "firebase": "^10.13.0",
     "localforage": "^1.10.0",
@@ -19,6 +21,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.1",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2"
